--- a/moto/ec2/resources/instance_type_offerings/region/ap-southeast-2.json
+++ b/moto/ec2/resources/instance_type_offerings/region/ap-southeast-2.json
@@ -464,6 +464,42 @@
   "Location": "ap-southeast-2"
  },
  {
+  "InstanceType": "c7g.12xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c7g.16xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c7g.2xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c7g.4xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c7g.8xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c7g.large",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c7g.medium",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c7g.metal",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c7g.xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
   "InstanceType": "d2.2xlarge",
   "Location": "ap-southeast-2"
  },
