--- a/moto/ec2/resources/instance_type_offerings/availability-zone-id/ap-southeast-2.json
+++ b/moto/ec2/resources/instance_type_offerings/availability-zone-id/ap-southeast-2.json
@@ -464,6 +464,42 @@
   "Location": "apse2-az1"
  },
  {
+  "InstanceType": "c7g.12xlarge",
+  "Location": "apse2-az1"
+ },
+ {
+  "InstanceType": "c7g.16xlarge",
+  "Location": "apse2-az1"
+ },
+ {
+  "InstanceType": "c7g.2xlarge",
+  "Location": "apse2-az1"
+ },
+ {
+  "InstanceType": "c7g.4xlarge",
+  "Location": "apse2-az1"
+ },
+ {
+  "InstanceType": "c7g.8xlarge",
+  "Location": "apse2-az1"
+ },
+ {
+  "InstanceType": "c7g.large",
+  "Location": "apse2-az1"
+ },
+ {
+  "InstanceType": "c7g.medium",
+  "Location": "apse2-az1"
+ },
+ {
+  "InstanceType": "c7g.metal",
+  "Location": "apse2-az1"
+ },
+ {
+  "InstanceType": "c7g.xlarge",
+  "Location": "apse2-az1"
+ },
+ {
   "InstanceType": "d2.2xlarge",
   "Location": "apse2-az1"
  },
@@ -2316,6 +2352,42 @@
   "Location": "apse2-az2"
  },
  {
+  "InstanceType": "c7g.12xlarge",
+  "Location": "apse2-az2"
+ },
+ {
+  "InstanceType": "c7g.16xlarge",
+  "Location": "apse2-az2"
+ },
+ {
+  "InstanceType": "c7g.2xlarge",
+  "Location": "apse2-az2"
+ },
+ {
+  "InstanceType": "c7g.4xlarge",
+  "Location": "apse2-az2"
+ },
+ {
+  "InstanceType": "c7g.8xlarge",
+  "Location": "apse2-az2"
+ },
+ {
+  "InstanceType": "c7g.large",
+  "Location": "apse2-az2"
+ },
+ {
+  "InstanceType": "c7g.medium",
+  "Location": "apse2-az2"
+ },
+ {
+  "InstanceType": "c7g.metal",
+  "Location": "apse2-az2"
+ },
+ {
+  "InstanceType": "c7g.xlarge",
+  "Location": "apse2-az2"
+ },
+ {
   "InstanceType": "d2.2xlarge",
   "Location": "apse2-az2"
  },
@@ -4061,6 +4133,42 @@
  },
  {
   "InstanceType": "c6id.xlarge",
+  "Location": "apse2-az3"
+ },
+ {
+  "InstanceType": "c7g.12xlarge",
+  "Location": "apse2-az3"
+ },
+ {
+  "InstanceType": "c7g.16xlarge",
+  "Location": "apse2-az3"
+ },
+ {
+  "InstanceType": "c7g.2xlarge",
+  "Location": "apse2-az3"
+ },
+ {
+  "InstanceType": "c7g.4xlarge",
+  "Location": "apse2-az3"
+ },
+ {
+  "InstanceType": "c7g.8xlarge",
+  "Location": "apse2-az3"
+ },
+ {
+  "InstanceType": "c7g.large",
+  "Location": "apse2-az3"
+ },
+ {
+  "InstanceType": "c7g.medium",
+  "Location": "apse2-az3"
+ },
+ {
+  "InstanceType": "c7g.metal",
+  "Location": "apse2-az3"
+ },
+ {
+  "InstanceType": "c7g.xlarge",
   "Location": "apse2-az3"
  },
  {
