--- a/moto/ec2/resources/instance_type_offerings/availability-zone/ap-northeast-1.json
+++ b/moto/ec2/resources/instance_type_offerings/availability-zone/ap-northeast-1.json
@@ -1268,6 +1268,78 @@
   "Location": "ap-northeast-1a"
  },
  {
+  "InstanceType": "m6idn.12xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6idn.16xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6idn.24xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6idn.2xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6idn.32xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6idn.4xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6idn.8xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6idn.large",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6idn.xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6in.12xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6in.16xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6in.24xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6in.2xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6in.32xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6in.4xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6in.8xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6in.large",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6in.xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
   "InstanceType": "mac1.metal",
   "Location": "ap-northeast-1a"
  },
@@ -1741,6 +1813,78 @@
  },
  {
   "InstanceType": "r6id.xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6idn.12xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6idn.16xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6idn.24xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6idn.2xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6idn.32xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6idn.4xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6idn.8xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6idn.large",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6idn.xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6in.12xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6in.16xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6in.24xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6in.2xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6in.32xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6in.4xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6in.8xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6in.large",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "r6in.xlarge",
   "Location": "ap-northeast-1a"
  },
  {
@@ -2429,6 +2573,78 @@
  },
  {
   "InstanceType": "c6id.xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6in.12xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6in.16xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6in.24xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6in.2xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6in.32xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6in.4xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6in.8xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6in.large",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6in.xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c7g.12xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c7g.16xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c7g.2xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c7g.4xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c7g.8xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c7g.large",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c7g.medium",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c7g.metal",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c7g.xlarge",
   "Location": "ap-northeast-1c"
  },
  {
@@ -3264,6 +3480,78 @@
   "Location": "ap-northeast-1c"
  },
  {
+  "InstanceType": "m6idn.12xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6idn.16xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6idn.24xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6idn.2xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6idn.32xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6idn.4xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6idn.8xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6idn.large",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6idn.xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6in.12xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6in.16xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6in.24xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6in.2xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6in.32xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6in.4xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6in.8xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6in.large",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6in.xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
   "InstanceType": "mac1.metal",
   "Location": "ap-northeast-1c"
  },
@@ -3697,6 +3985,78 @@
  },
  {
   "InstanceType": "r6id.xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6idn.12xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6idn.16xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6idn.24xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6idn.2xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6idn.32xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6idn.4xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6idn.8xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6idn.large",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6idn.xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6in.12xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6in.16xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6in.24xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6in.2xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6in.32xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6in.4xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6in.8xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6in.large",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6in.xlarge",
   "Location": "ap-northeast-1c"
  },
  {
@@ -4285,6 +4645,78 @@
  },
  {
   "InstanceType": "c6id.xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6in.12xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6in.16xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6in.24xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6in.2xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6in.32xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6in.4xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6in.8xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6in.large",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6in.xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c7g.12xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c7g.16xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c7g.2xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c7g.4xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c7g.8xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c7g.large",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c7g.medium",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c7g.metal",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c7g.xlarge",
   "Location": "ap-northeast-1d"
  },
  {
@@ -4988,6 +5420,78 @@
   "Location": "ap-northeast-1d"
  },
  {
+  "InstanceType": "m6idn.12xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6idn.16xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6idn.24xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6idn.2xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6idn.32xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6idn.4xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6idn.8xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6idn.large",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6idn.xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6in.12xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6in.16xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6in.24xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6in.2xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6in.32xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6in.4xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6in.8xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6in.large",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6in.xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
   "InstanceType": "r4.16xlarge",
   "Location": "ap-northeast-1d"
  },
@@ -5405,6 +5909,78 @@
  },
  {
   "InstanceType": "r6id.xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6idn.12xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6idn.16xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6idn.24xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6idn.2xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6idn.32xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6idn.4xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6idn.8xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6idn.large",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6idn.xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6in.12xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6in.16xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6in.24xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6in.2xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6in.32xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6in.4xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6in.8xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6in.large",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "r6in.xlarge",
   "Location": "ap-northeast-1d"
  },
  {
