--- a/moto/ec2/resources/instance_type_offerings/availability-zone/us-east-1.json
+++ b/moto/ec2/resources/instance_type_offerings/availability-zone/us-east-1.json
@@ -1820,6 +1820,42 @@
   "Location": "us-east-1a"
  },
  {
+  "InstanceType": "r7g.12xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "r7g.16xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "r7g.2xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "r7g.4xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "r7g.8xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "r7g.large",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "r7g.medium",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "r7g.metal",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "r7g.xlarge",
+  "Location": "us-east-1a"
+ },
+ {
   "InstanceType": "t1.micro",
   "Location": "us-east-1a"
  },
@@ -11529,6 +11565,42 @@
  },
  {
   "InstanceType": "r6in.xlarge",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "r7g.12xlarge",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "r7g.16xlarge",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "r7g.2xlarge",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "r7g.4xlarge",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "r7g.8xlarge",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "r7g.large",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "r7g.medium",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "r7g.metal",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "r7g.xlarge",
   "Location": "us-east-1f"
  },
  {
