--- a/moto/ec2/resources/instance_type_offerings/region/ap-northeast-1.json
+++ b/moto/ec2/resources/instance_type_offerings/region/ap-northeast-1.json
@@ -432,6 +432,78 @@
   "Location": "ap-northeast-1"
  },
  {
+  "InstanceType": "c6in.12xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "c6in.16xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "c6in.24xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "c6in.2xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "c6in.32xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "c6in.4xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "c6in.8xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "c6in.large",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "c6in.xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "c7g.12xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "c7g.16xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "c7g.2xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "c7g.4xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "c7g.8xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "c7g.large",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "c7g.medium",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "c7g.metal",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "c7g.xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
   "InstanceType": "cc2.8xlarge",
   "Location": "ap-northeast-1"
  },
@@ -1268,6 +1340,78 @@
   "Location": "ap-northeast-1"
  },
  {
+  "InstanceType": "m6idn.12xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6idn.16xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6idn.24xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6idn.2xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6idn.32xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6idn.4xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6idn.8xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6idn.large",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6idn.xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6in.12xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6in.16xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6in.24xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6in.2xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6in.32xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6in.4xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6in.8xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6in.large",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "m6in.xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
   "InstanceType": "mac1.metal",
   "Location": "ap-northeast-1"
  },
@@ -1741,6 +1885,78 @@
  },
  {
   "InstanceType": "r6id.xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6idn.12xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6idn.16xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6idn.24xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6idn.2xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6idn.32xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6idn.4xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6idn.8xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6idn.large",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6idn.xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6in.12xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6in.16xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6in.24xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6in.2xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6in.32xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6in.4xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6in.8xlarge",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6in.large",
+  "Location": "ap-northeast-1"
+ },
+ {
+  "InstanceType": "r6in.xlarge",
   "Location": "ap-northeast-1"
  },
  {
