--- a/.github/workflows/data-update_ssm-default-amis.yml
+++ b/.github/workflows/data-update_ssm-default-amis.yml
@@ -9,8 +9,7 @@ name: "DataUpdate_SSMdefaultAMIs"
 
 on:
   schedule:
-    - cron: '00 12 * * 0'
-  workflow_dispatch:
+    - cron: '00 10 * * 0'
 
 jobs:
   update:
@@ -40,13 +39,12 @@ jobs:
     - name: Pull SSM default AMIs from AWS
       uses: technote-space/create-pr-action@v2
       with:
-        GITHUB_TOKEN: ${{ secrets.PR_ACCESS_TOKEN }}
         EXECUTE_COMMANDS: |
           pip install boto3
-          pip install moto
+          pip install moto[all]
           python scripts/ssm_get_default_amis.py
         COMMIT_MESSAGE: "chore: update SSM default AMI's"
         COMMIT_NAME: 'Moto Admin'
         COMMIT_EMAIL: 'admin@getmoto.org'
-        PR_BRANCH_NAME: 'chore-update-ssm-amis-${PR_ID}'
+        PR_BRANCH_NAME: 'chore-update-ssm-amis-${{ github.run_number }}'
         PR_TITLE: "chore: update SSM Instance AMI's"
