--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,6 +6,7 @@ include moto/ec2/resources/instance_types.json
 include moto/ec2/resources/instance_type_offerings/*/*.json
 include moto/ec2/resources/latest_amis/*.json
 include moto/ec2/resources/amis.json
+include moto/ec2/resources/ecs/optimized_amis/*.json
 include moto/cognitoidp/resources/*.json
 include moto/dynamodb/parsing/reserved_keywords.txt
 include moto/moto_api/_internal/*
@@ -13,6 +14,7 @@ include moto/rds/resources/cluster_options/*.json
 include moto/servicequotas/resources/*/*.json
 include moto/ssm/resources/*.json
 include moto/ssm/resources/ami-amazon-linux-latest/*.json
+include moto/ssm/resources/ecs/optimized_amis/*.json
 include moto/support/resources/*.json
 recursive-include moto/moto_server *
 recursive-include tests *
