--- a/moto/ec2/resources/instance_type_offerings/availability-zone-id/ap-southeast-1.json
+++ b/moto/ec2/resources/instance_type_offerings/availability-zone-id/ap-southeast-1.json
@@ -4812,6 +4812,50 @@
   "Location": "apse1-az3"
  },
  {
+  "InstanceType": "m6a.12xlarge",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "m6a.16xlarge",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "m6a.24xlarge",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "m6a.2xlarge",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "m6a.32xlarge",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "m6a.48xlarge",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "m6a.4xlarge",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "m6a.8xlarge",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "m6a.large",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "m6a.metal",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "m6a.xlarge",
+  "Location": "apse1-az3"
+ },
+ {
   "InstanceType": "m6g.12xlarge",
   "Location": "apse1-az3"
  },
